--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css">
     <!-- normalize.css v8.0.1 -->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/normalize.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/custom.css">
 
   </head>
   <body class="bg-snow">
