--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+<head>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -24,7 +24,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="format-detection" content="telephone=no">
 
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#20023a">
     <meta name="description" content="Fintech App">
 
     <!-- favicon -->
@@ -51,50 +51,50 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/normalize.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/custom.css">
 
-  </head>
-  <body class="bg-snow">
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+</head>
+<body class="bg-snow">
+<noscript>You need to enable JavaScript to run this app.</noscript>
 
-  <div id="root"></div>
-  <!--
-    This HTML file is a template.
-    If you open it directly in the browser, you will see an empty page.
+<div id="root"></div>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
 
-    You can add webfonts, meta tags, or analytics to this file.
-    The build step will place the bundled scripts into the <body> tag.
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
 
-    To begin the development, run `npm start` or `yarn start`.
-    To create a production bundle, use `npm run build` or `yarn build`.
-  -->
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
 
-  <!-- jquery -->
-  <script src="%PUBLIC_URL%/assets/js/jquery-3.6.0.js"></script>
-  <!-- popper.min.js 1.16.1 -->
-  <script src="%PUBLIC_URL%/assets/js/popper.min.js"></script>
-  <!-- bootstrap.js v4.6.0 -->
-  <script src="%PUBLIC_URL%/assets/js/bootstrap.min.js"></script>
+<!-- jquery -->
+<script src="%PUBLIC_URL%/assets/js/jquery-3.6.0.js"></script>
+<!-- popper.min.js 1.16.1 -->
+<script src="%PUBLIC_URL%/assets/js/popper.min.js"></script>
+<!-- bootstrap.js v4.6.0 -->
+<script src="%PUBLIC_URL%/assets/js/bootstrap.min.js"></script>
 
-  <!-- Owl Carousel v2.3.4 -->
-  <script src="%PUBLIC_URL%/assets/js/vendor/owl.carousel.min.js"></script>
-  <!-- Swiper 6.4.11 -->
-  <script src="%PUBLIC_URL%/assets/js/vendor/swiper-bundle.min.js"></script>
-  <!-- sharer 0.4.0 -->
-  <script src="%PUBLIC_URL%/assets/js/vendor/sharer.js"></script>
-  <!-- short-and-sweet v1.0.2 - Accessible character counter for input elements -->
-  <script src="%PUBLIC_URL%/assets/js/vendor/short-and-sweet.min.js"></script>
-  <!-- jquery knob -->
-  <script src="%PUBLIC_URL%/assets/js/vendor/jquery.knob.min.js"></script>
-  <!-- main.js -->
-  <script src="%PUBLIC_URL%/assets/js/main.js"></script>
+<!-- Owl Carousel v2.3.4 -->
+<script src="%PUBLIC_URL%/assets/js/vendor/owl.carousel.min.js"></script>
+<!-- Swiper 6.4.11 -->
+<script src="%PUBLIC_URL%/assets/js/vendor/swiper-bundle.min.js"></script>
+<!-- sharer 0.4.0 -->
+<script src="%PUBLIC_URL%/assets/js/vendor/sharer.js"></script>
+<!-- short-and-sweet v1.0.2 - Accessible character counter for input elements -->
+<script src="%PUBLIC_URL%/assets/js/vendor/short-and-sweet.min.js"></script>
+<!-- jquery knob -->
+<script src="%PUBLIC_URL%/assets/js/vendor/jquery.knob.min.js"></script>
+<!-- main.js -->
+<script src="%PUBLIC_URL%/assets/js/main.js"></script>
 
 
-  <script>
+<script>
     $(document).ready(function () {
-      document.jQuery = $
+        document.jQuery = $
     });
 
-  </script>
+</script>
 
 
-  </body>
+</body>
 </html>
