--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="format-detection" content="telephone=no">
 
-    <meta name="theme-color" content="#20023a">
+    <meta name="theme-color" content="#546ffe">
     <meta name="description" content="Fintech App">
 
     <!-- favicon -->
