--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,8 @@
 <!-- main.js -->
 <script src="%PUBLIC_URL%/assets/js/main.js"></script>
 
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 
 <script>
     $(document).ready(function () {
