--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,100 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-    <link rel="stylesheet" href="assets/css/iphoneEnclosure.css">
-    <title></title>
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+
+    <title>UTranzact | React Fintech App</title>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="format-detection" content="telephone=no">
+
+    <meta name="theme-color" content="#546ffe">
+    <meta name="description" content="Fintech App">
+
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/assets/img/favicon/32.png" sizes="32x32">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/img/favicon/favicon192.png">
+
+    <!-- CSS Libraries-->
+    <!-- bootstrap v4.6.0 -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
+    <!--
+        theiconof v3.0
+        https://www.theiconof.com/search
+     -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/icons.css">
+    <!-- Remix Icon -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/remixicon.css">
+    <!-- Swiper 6.4.11 -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/swiper-bundle.min.css">
+    <!-- Owl Carousel v2.3.4 -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/owl.carousel.min.css">
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/main.css">
+    <!-- normalize.css v8.0.1 -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/normalize.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/custom.css">
+
 </head>
-<div class="iphone-x">
+<body class="bg-snow">
+<noscript>You need to enable JavaScript to run this app.</noscript>
 
-    Test enclosure
+<div id="root"></div>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
 
-    <iframe src="index.html" style="width:100%;height:100%"></iframe>
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
+
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
+
+<!-- jquery -->
+<script src="%PUBLIC_URL%/assets/js/jquery-3.6.0.js"></script>
+<!-- popper.min.js 1.16.1 -->
+<script src="%PUBLIC_URL%/assets/js/popper.min.js"></script>
+<!-- bootstrap.js v4.6.0 -->
+<script src="%PUBLIC_URL%/assets/js/bootstrap.min.js"></script>
+
+<!-- Owl Carousel v2.3.4 -->
+<script src="%PUBLIC_URL%/assets/js/vendor/owl.carousel.min.js"></script>
+<!-- Swiper 6.4.11 -->
+<script src="%PUBLIC_URL%/assets/js/vendor/swiper-bundle.min.js"></script>
+<!-- sharer 0.4.0 -->
+<script src="%PUBLIC_URL%/assets/js/vendor/sharer.js"></script>
+<!-- short-and-sweet v1.0.2 - Accessible character counter for input elements -->
+<script src="%PUBLIC_URL%/assets/js/vendor/short-and-sweet.min.js"></script>
+<!-- jquery knob -->
+<script src="%PUBLIC_URL%/assets/js/vendor/jquery.knob.min.js"></script>
+<!-- main.js -->
+<script src="%PUBLIC_URL%/assets/js/main.js"></script>
+
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 
-</div>
+<script>
+    $(document).ready(function () {
+        document.jQuery = $
+    });
+
+</script>
+</body>
+</html>
